# monteprediction-client-v2

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/mp_framework/: __init__.py  generator.py
