[project]
name = "mp-framework"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rusty Conover", email = "rusty@conover.me" }
]
dependencies = [
    "monteprediction>=1.0.19",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
generate_predictions = 'mp_framework:run'

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mp_framework"]
